@@ -1,4 +1,5 @@
-06292013 -> jonnyboy ->	made tmux colors array user defineable
+06292013 -> jonnyboy ->	removed hard coded db name from clean_nzb
+						made tmux colors array user defineable
 						changed query for music to process
 						added output to start of threaded scripts
 						separated decrypt hashes and predb
